--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
             <!-- Projects-->
             <section class="resume-section" id="projects">
-                <div class="resume-section-content">
+                <div class="resume-section-content" style="max-width:700px; word-wrap:break-word;">
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -90,28 +90,28 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Statistical Finance II</h3>
-                            <div class="subheading mb-3">Semester Report: Bootstrap for Expected Shortfall of Noncentral t.
+                            <h3 class="mb-0" >Statistical Finance II</h3>
+                            <div class="subheading mb-3" style="max-width:700px; word-wrap:break-word;">Semester Report: Bootstrap for Expected Shortfall of Noncentral t.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/Homework2CESAREVILLIGER_updated.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>In this report, we simulate random variates for the noncentral t distribution and copmare the coverage accuracies of confidence intervals for the expected shortfall based on the parametric and non-parametric bootstrap.</p>
+                            <p style="max-width:700px; word-wrap:break-word;">In this report, we simulate random variates for the noncentral t distribution and copmare the coverage accuracies of confidence intervals for the expected shortfall based on the parametric and non-parametric bootstrap.</p>
                         </div>
                         <img src="/assets/img/2.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Statistical Finance I</h3>
-                            <div class="subheading mb-3">Semester Report: Expected Shortfall of Stable Paretian Distribution.
+                            <div class="subheading mb-3" style="max-width:700px; word-wrap:break-word;">Semester Report: Expected Shortfall of Stable Paretian Distribution.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/Homework1CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>In this report, we simulate the stable Paretian distribution and sums thereof for different tail indices and compare the theoretical to the empirical expected shortfall.</p>
+                            <p style="max-width:700px; word-wrap:break-word;">In this report, we simulate the stable Paretian distribution and sums thereof for different tail indices and compare the theoretical to the empirical expected shortfall.</p>
                         </div>
                         <img src="/assets/img/1.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor Thesis</h3>
-                            <div class="subheading mb-3" style="max-width:650px; word-wrap:break-word;">Estimation of influence of railway construction on Swiss GDP using extended generalised method of moments framework.
+                            <div class="subheading mb-3" style="max-width:700px; word-wrap:break-word;">Estimation of influence of railway construction on Swiss GDP using extended generalised method of moments framework.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/BA_Cesare_Villiger.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p style="max-width:650px; word-wrap:break-word;">Absract: Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refers to 191 districts of Switzerland over a period of five decades. In the estimation of a dynamic panel model, an endogeneity problem between the error terms and the lagged dependent variable arises (Nickell, 1981). This problem can be solved by a generalised method of moments estimator (GMM), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998), which yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive. This suggests that certain districts have used railway construction to their advantage and were able to maintain this advantage over the entire period under consideration.
+                            <p style="max-width:700px; word-wrap:break-word;">Absract: Absract: This paper examines the influence of railway construction on economic growth in Switzerland in the second half of the 19th century. The data refers to 191 districts of Switzerland over a period of five decades. In the estimation of a dynamic panel model, an endogeneity problem between the error terms and the lagged dependent variable arises (Nickell, 1981). This problem can be solved by a generalised method of moments estimator (GMM), which uses lags of the regressors as instruments. This paper uses a system GMM estimator according to Blundell and Bond (1998), which yields a significantly negative estimator for the aggregate effect across all districts. The disaggregated effect for the largest districts is, however, significantly positive. This suggests that certain districts have used railway construction to their advantage and were able to maintain this advantage over the entire period under consideration.
 </p>
                         </div>
                         <img src="/assets/img/BA.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
