--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         MA Student Economics and Data Science <br>
                         UZH | ETH
                     </div>
-                    <p class="lead mb-5"> <span class="text-primary"> <font size="+2"><i>"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
+                    <p class="lead mb-5" style="max-width:700px; word-wrap:break-word;"> <span class="text-primary"> <font size="+2"><i>"Enthusiastic, motivated and ambitious. Always willing to learn new things and broaden my horizon. 
                         I am very resilient and meticulous when it comes to problem solving and deepening what has been learnt."</i> </font></span>  </p>
-                    <p class="lead mb-5">I finished my bachelor’s degree in economics and informatics at 
+                    <p class="lead mb-5" style="max-width:700px; word-wrap:break-word;">I finished my bachelor’s degree in economics and informatics at 
                         the UZH in 2021 and grew fond of the connection between economics and data science. 
                         My main interests lie in monetary and public policy, as well as international and labour economics. I am also taken by the possibilities 
                         of machine learning to expand on the econometric toolset and discover crucial insights that were previously unattainable. 
@@ -77,14 +77,14 @@
             
             <!-- Projects-->
             <section class="resume-section" id="projects">
-                <div class="resume-section-content" style="max-width:700px; word-wrap:break-word;">
+                <div class="resume-section-content" >
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Statistical Finance III</h3>
-                            <div class="subheading mb-3">Semester Report: Multivariate t and the Expectation Maximisation Algorithm.
+                            <div class="subheading mb-3" style="max-width:700px; word-wrap:break-word;">Semester Report: Multivariate t and the Expectation Maximisation Algorithm.
                                 &nbsp;&nbsp;<a class="social-icon" href="/js/Homework3CESAREVILLIGER.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
-                            <p>In this report, we simulate random variates of the multivariate t distribution and use the MMF algorithm, an improvement on the EM algorithm, to estimate its paramters. We compare the estimate to the ones given by MLE and weighted estimates thereof.</p>
+                            <p style="max-width:700px; word-wrap:break-word;">In this report, we simulate random variates of the multivariate t distribution and use the MMF algorithm, an improvement on the EM algorithm, to estimate its paramters. We compare the estimate to the ones given by MLE and weighted estimates thereof.</p>
                         </div>
                         <img src="/assets/img/3.jpg" width="300" height="200" style="border:5px double black;" alt="BachelorThesis">
                     </div>
@@ -130,7 +130,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research and Teaching Assistant</h3>
                             <div class="subheading mb-3">Institute of Banking & Finance (UZH)</div>
-                            <ul>
+                            <ul style="max-width:700px; word-wrap:break-word;">
                               <li>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.</li>
                               <li>Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".</li>
                               <li>Data gathering and visualisation for various professors at the Institute of Banking & Finance.</li>
@@ -153,7 +153,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Eidgenössische Technische Hochschule (ETH)</h3>
                             <div class="subheading mb-3">Special Students Program: MSc in Data Science, Statistics and Economics</div>
-                            <p>24/30 ECTS of electives courses expected to be completed at ETH, covering multivariate statistics, statistical regression and applied time series analysis.</p>
+                            <p style="max-width:700px; word-wrap:break-word;">24/30 ECTS of electives courses expected to be completed at ETH, covering multivariate statistics, statistical regression and applied time series analysis.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2022 - Feb. 2024</span></div>
                     </div>
