--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Internship "Devisenhandel"</h3>
+                            <div class="subheading mb-3">Swiss National Bank (SNB)</div>
+                            <ul>
+                              <li>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.</li>
+                              <li>Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".</li>
+                              <li>Data gathering and visualisation for various professors at the Institute of Banking & Finance.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2023 - Mar. 2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Research and Teaching Assistant</h3>
                             <div class="subheading mb-3">Institute of Banking & Finance (UZH)</div>
                             <ul>
