--- a/index.html
+++ b/index.html
@@ -128,11 +128,29 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Internship "Devisenhandel"</h3>
+                            <h3 class="mb-0">Implementation Analysis Intern</h3>
                             <div class="subheading mb-3">Swiss National Bank (SNB)</div>
-                           
+                            <ul>
+                              <li>Participation in the operational implementation of monetary policy as a foreign exchange trader;</li>
+                              <li>Analyse and interpret events in the financial markets;</li>
+                              <li>Designing and developing tools for reporting on relevant financial market events and monetary policy implementation;</li>
+                              <li>Developing qualitative and quantitative analyses of the money market and foreign exchange markets.</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2023 - Mar. 2024</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jul. 2023 - Mar. 2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">FX Analysis Intern</h3>
+                            <div class="subheading mb-3">Swiss National Bank (SNB)</div>
+                            <ul>
+                              <li>Support the team in the implementation of monetary policy in the foreign exchange market;</li>
+                              <li>Design and develop tools for ongoing monitoring and reporting of relevant financial market events;</li>
+                              <li>Tracking, evaluating and interpreting events in the financial markets;</li>
+                              <li>Contribute to quantitative analyses and research projects; make own contributions.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2023 - Jul. 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
