--- a/index.html
+++ b/index.html
@@ -154,8 +154,18 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Teaching Assistant</h3>
+                            <div class="subheading mb-3">Foundations of Data Science, Department of Informatics (UZH)</div>
+                            <ul>
+                              <li>Managed and mentored student teams on practical tasks, while also being responsible for the preparation, grading, and correction of exams.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2023 - Feb. 2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Research and Teaching Assistant</h3>
-                            <div class="subheading mb-3">Institute of Banking & Finance (UZH)</div>
+                            <div class="subheading mb-3">Department of Banking & Finance (UZH)</div>
                             <ul>
                               <li>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.</li>
                               <li>Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".</li>
@@ -163,6 +173,26 @@
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2020 - now</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Teaching Assistant</h3>
+                            <div class="subheading mb-3">Sekundarschulhaus Neumünster, Zurich (UZH)</div>
+                            <ul>
+                              <li>Teaching assistant for secondary school in Zurich. Reponsible for: informatics, mathematics, and languages (German, English, French).</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dez. 2017 - April 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Tutor</h3>
+                            <div class="subheading mb-3">Boost the Support, Zurich (UZH)</div>
+                            <ul>
+                              <li>Tutoring students ranging from grammar school preparation to university level in mathematics, German and French.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug. 2016 - Sep. 2020</span></div>
                     </div>
                    
                 </div>
