--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <h3 class="mb-3">Internships</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Implementation Analysis Intern</h3>
@@ -152,6 +153,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Mar. 2023 - Jul. 2023</span></div>
                     </div>
+                    <h3 class="mb-3">University and Teaching</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Teaching Assistant</h3>
