--- a/index.html
+++ b/index.html
@@ -231,6 +231,22 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - Feb. 2022</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">International Baccalaureate Diploma Programme  (UZH)</h3>
+                            <div class="subheading mb-3">Focus on Latin, Maths and English.&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <p>Final Grade: 5.1 (magna cum laude).</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2017 - Aug. 2017</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Swiss Matura (UZH)</h3>
+                            <div class="subheading mb-3">Literaturgymnasium Zurichs&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <p>Focus on Latin, English, Maths and Music.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar. 2017 - Aug. 2017</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
