--- a/index.html
+++ b/index.html
@@ -209,24 +209,24 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Eidgenössische Technische Hochschule (ETH)</h3>
-                            <div class="subheading mb-3">Special Students Program: MSc in Data Science, Statistics and Economics</div>
+                            <h3 class="mb-0">Special Students Program: MSc in Data Science, Statistics and Economics</h3>
+                            <div class="subheading mb-3">Eidgenössische Technische Hochschule (ETH)</div>
                             <p >24/30 ECTS of electives courses expected to be completed at ETH, covering multivariate statistics, statistical regression and applied time series analysis.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2022 - Feb. 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Zurich (UZH)</h3>
-                            <div class="subheading mb-3">MA Economics and Data Science</div>
+                            <h3 class="mb-0">MA Economics and Data Science</h3>
+                            <div class="subheading mb-3">University of Zurich (UZH)</div>
                             <p>Current Average Grade: 5.7.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb. 2022 - Feb. 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Zurich (UZH)</h3>
-                            <div class="subheading mb-3">BA Economics and Informatics&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
+                            <h3 class="mb-0">BA Economics and Informatics</h3>
+                            <div class="subheading mb-3">University of Zurich (UZH)&nbsp;&nbsp;<a class="social-icon" href="/js/Linear_Algebra_I.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i></a></div>
                             <p>Final Grade: 5.1 (magna cum laude).</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - Feb. 2022</span></div>
