--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     <div class="subheading mb-3">General</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">
-                            <div>Windows</div>
+                            <div style="font-size: 1rem;">Microsoft Office</div>
                             <i class="fa-brands fa-windows"></i>
                         </li>
                     </ul>
@@ -270,31 +270,31 @@
                     <div class="subheading mb-3">Coding</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">
-                            <div>Python</div>
+                            <div style="font-size: 1rem;">Python</div>
                             <i class="devicon-python-plain"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>R</div>
+                            <div style="font-size: 1rem;">R</div>
                             <i class="devicon-r-original"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>Matlab</div>
+                            <div style="font-size: 1rem;">Matlab</div>
                             <i class="devicon-matlab-plain"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>MySQL</div>
+                            <div style="font-size: 1rem;">SQL</div>
                             <i class="devicon-mysql-plain"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>HTML5</div>
+                            <div style="font-size: 1rem;">HTML5</div>
                             <i class="fa-brands fa-html5"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>LaTeX</div>
+                            <div style="font-size: 1rem;">LaTeX</div>
                             <i class="devicon-latex-original"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>GitHub</div>
+                            <div style="font-size: 1rem;">Git/Github</div>
                             <i class="devicon-github-original"></i>
                         </li>
                     </ul>
@@ -302,15 +302,15 @@
                     <div class="subheading mb-3">Visualisation</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item">
-                            <div>Tableau</div>
+                            <div style="font-size: 1rem;">Tableau</div>
                             <i class="fa fa-table"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>Power BI</div>
+                            <div style="font-size: 1rem;">Power Bi</div>
                             <i class="fa fa-bar-chart"></i>
                         </li>
                         <li class="list-inline-item">
-                            <div>Canva</div>
+                            <div style="font-size: 1rem;">Canva</div>
                             <i class="devicon-canva-original"></i>
                         </li>
                     </ul>
