--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <h3 class="mb-0">Research and Teaching Assistant</h3>
                             <div class="subheading mb-3">Department of Banking & Finance (UZH)</div>
                             <ul>
-                              <li>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, and administrative supervision.</li>
+                              <li>Responsible Headcoach for the course "Corporate Finance" with over 400 students and MAS participants. This includes: hosting exercise sessions, preparing the course material, learning videos and final exam, administration and recruitment.</li>
                               <li>Co-creation and lecturing in the courses "Climate Change Finance" and "eFundamentals of Programming".</li>
                               <li>Data gathering and visualisation for various professors at the Institute of Banking & Finance.</li>
                             </ul>
