--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/cesare-villiger-346bb121a/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/c-villiger" target="_blank"><i class="fab fa-github" target="_blank"></i></a>
                         <a class="social-icon" href="mailto:cesare.villiger@bluewin.ch" target="_blank"><i class="fa fa-at"></i></a>
-                        <a class="social-icon" href="/js/Website_Upload.pdf" target="_blank"><i class="ai ai-cv"></i></a>
+                        <a class="social-icon" href="/js/CV_CesareVilliger_Website.pdf" target="_blank"><i class="ai ai-cv"></i></a>
                     </div>
                 </div>
             </section>
